# Voodoo-LOCAL

./: .gitignore  CMakeLists.txt
domain/: CMakeLists.txt
domain/include/: database.h  domain.h  mappers.h  models.h
domain/src/: database.c
domain/src/database/: database.c  database.h
domain/src/mappers/: mappers.c  mappers.h  yara_rule_mapper.c
domain/src/models/: models.h
infrastructure/: CMakeLists.txt
infrastructure/include/: plugins.h
infrastructure/src/: plugin_loader.c  plugins.c
presentation/: CMakeLists.txt
presentation/src/: main.c
presentation/src/configuration/: configuration.c  configuration.h
